--- a/breads.html
+++ b/breads.html
@@ -150,6 +150,90 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkinbread.png" class="w-100" alt="Pumpkin Bread">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/creampuffs" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/biscuits" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="Biscuits">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/dinnerrolls" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/dinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/dinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/loafbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/loafbread.jpg" class="w-100" alt="Loaf Bread">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/loafbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Loaf Bread</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/gfdfbiscuits" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Biscuits">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
