--- a/cookies.html
+++ b/cookies.html
@@ -110,6 +110,38 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/puddingchocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/puddingchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/puddingchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
               <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
             </a>
@@ -140,6 +172,16 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/mnmcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/samoas" class="tstbite-animation rounded-6">
