--- a/other.html
+++ b/other.html
@@ -107,146 +107,7 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Other</h5>
-      <p>These recipes are made with gluten, dairy, eggs, and refined sugar. Although I cut these foods out of my diet, these were my staple recipes back in the day and I'd like to share them here so that others can still enjoy.</p>
       <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/puddingchocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/puddingchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/puddingchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/mnmcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkinbread.png" class="w-100" alt="Pumpkin Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="Biscuits">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
-            </figcaption>
-          </figure>
-        </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/crepes" class="tstbite-animation rounded-6">
@@ -267,15 +128,25 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/maplevanillagranola" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/maplevanillagranola.jpg" class="w-100" alt="Maple Vanilla Granola">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/maplevanillagranola" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Maple Vanilla Granola</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/butterbars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
+            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
             </a>
             <figcaption class="mt-2">
-              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
+              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
             </figcaption>
           </figure>
         </div>
@@ -300,49 +171,6 @@
           </figure>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/fusilliallavodka" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/fusilliallavodka.png" class="w-100" alt="Fusilli Alla Vodka">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/fusilliallavodka" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fusilli Alla Vodka</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/soup" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Chicken Noodle Soup">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/soup" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Noodle Soup</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/dinnerrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/dinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/dinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/loafbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/loafbread.jpg" class="w-100" alt="Loaf Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/loafbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Loaf Bread</a>
-            </figcaption>
-          </figure>
-        </div>
       </div>
     </section>
   </div>
