--- a/spiralburek.html
+++ b/spiralburek.html
@@ -78,7 +78,7 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="/bars">Bars</a>
+                  <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
@@ -104,60 +104,146 @@
           </button>        
         </nav>
       </header>
+  </div>
 
+  <div class="container">
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Bars</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
-            </figcaption>
-          </figure>
+      <div class="d-sm-flex">
+        <div class="tstbite-svg order-sm-2 ms-auto">
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/butterbars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
-            </figcaption>
-          </figure>
+        <div>
+          <strong>
+            <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+              <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"></path>
+            </svg>
+            <span class="ms-2 caption font-weight-medium">100% would make this again</span>
+          </strong>
+          <h5 class="py-3 mb-0 h2">Spiral Burek</h5>
         </div>
       </div>
+      <div class="d-flex flex-wrap">
+        <div class="my-2 me-4">
+          <small class="ps-1">Author: Xhulio Cooks</small>
+        </div>
+        <div class="my-2 me-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
+            <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
+          </svg>
+          <small>September 17th, 2024</small>
+        </div>
+      </div>
+      <div class="blog-detail">
+        <hr>
+        <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
+          <img src="assets/images/food/spiralburek1.png" class="w-100" >
+        </div>
+        <br>
+        <div class="row mt-0 mt-md-5">
+          <div class="col-md-12">
+            <ul class="list-unstyled component-list tstbite-svg">
+              <li>
+                <small>Prep Time</small>
+                <span>1 hour</span>
+              </li>
+              <li>
+                <small>Cook Time</small>
+                <span>40-50 minutes</span>
+              </li>
+              <li>
+                <small>Rising Time</small>
+                <span>30 minutes</span>
+              </li>
+              <li>
+                <small>Total Time</small>
+                <span>2 hours 15 minutes</span>
+              </li>
+              <li>
+                <small>Serving</small>
+                <span>2-4
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-4 mt-md-5">
+              <h6>Ingredients</h6>
+              <div class="checklist pb-2">
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="flour">3 cups (400g) flour (spoon & leveled)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="salt">2 teaspoons salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="EVOO">1 tablespoon EVOO</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="water">1-2 cups water</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="butter">4 tablespoons butter</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="cheese">Farmer's Cheese</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-5">
+              <h6>Instructions</h6>
+              <ul class="instruction-list list-unstyled">
+                <li>
+                  <span>1</span>
+                  In a mixing bowl combine flour, salt, EVOO, and 1 cup of water. Mix with your hands until dough becomes not too soft and a little bit sticky. If the dough is too hard, add a little more water. If the dough is too soft and sticky, add a little more flour. The perfect texture will be not too soft and a little bit sticky.
+                </li>
+                <li>
+                  <span>2</span>
+                  Take the dough and put it on a flat surface. Knead the dough with your wrists. Roll the dough, fold it over itself, then roll it again. Repeat this for five minutes.
+                </li>
+                <li>
+                  <span>3</span>
+                  Transfer the dough back to the bowl and spread a slight layer of EVOO on top with your hands, just so that it lightly covers the dough. Cover the bowl with plastic wrap twice. Wait 30 minutes for the dough to rest.
+                </li>
+                <li>
+                  <span>4</span>
+                  After the dough has rested for 30 minutes, preheat the oven to 360°F. Take the dough out and put it on a flat surface. Roll the dough into a log. Using your hands, cut the dough into 8 small equally sized pieces, then roll each into a ball. Cover each ball with a thin layer of EVOO using your hands so that they don't dry out. Put them all aside.
+                </li>
+                <li>
+                  <span>5</span>
+                  
+                </li>
+                <li>
+                  <span>6</span>
+                  
+                </li>
+                <li>
+                  <span>7</span>
+                  Bake for 40-50 minutes, or until the burek is golden brown. Let cool for 5 before slicing.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="tstbite-components my-4 my-md-5">
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
-            </figcaption>
+            <img src="assets/images/food/spiralburek1.png" class="w-100" alt="Spiral Burek">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/applepiebars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/applepiebars.jpg" class="w-100" alt="Apple Pie Bars">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/applepiebars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Apple Pie Bars</a>
-            </figcaption>
+            <img src="assets/images/food/spiralburek2.jpeg" class="w-100" alt="Spiral Burek">
           </figure>
         </div>
       </div>
@@ -170,7 +256,6 @@
   </footer>
 </section>
 
-<!-- Tastebite Scripts -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/html5.min.js"></script>
 <script src="assets/js/sticky.min.js"></script>
