--- a/cakesandpies.html
+++ b/cakesandpies.html
@@ -139,6 +139,18 @@
             </figure>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
       </div>
     </div>
     </section>
