--- a/lares.html
+++ b/lares.html
@@ -78,12 +78,12 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                  <a class="dropdown-item" href="/bars">Bars</a>
+                <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
+                <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
-                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -144,7 +144,7 @@
               <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="text-center mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a href="/bars" class="tstbite-category-title">Breakfast</a>
             </figcaption>
           </figure>
         </div>
