--- a/breakfast.html
+++ b/breakfast.html
@@ -80,10 +80,10 @@
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
+                <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
-                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -106,7 +106,7 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Other</h5>
+      <h5 class="py-3 mb-0">Breakfast</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
@@ -140,16 +140,6 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
-            </figcaption>
-          </figure>
-        </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/fudgefrosting" class="tstbite-animation rounded-6">
