--- a/food.html
+++ b/food.html
@@ -78,12 +78,12 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                  <a class="dropdown-item" href="/bars">Bars</a>
+                <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
+                <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
-                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -141,10 +141,10 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/other.png" class="rounded-circle" >
+              <img src="assets/images/food/breakfast.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a href="/bars" class="tstbite-category-title">Breakfast</a>
             </figcaption>
           </figure>
         </div>
