--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
-                <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breakfast">Breakfast</a>
               </div>
             </li>
             <li class="nav-item">
@@ -241,11 +241,11 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/breakfast" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/pancakesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/other" class="f-size-20 text-black d-block mt-1 font-weight-bold">Other</a>
+              <a href="/breakfast" class="f-size-20 text-black d-block mt-1 font-weight-bold">Breakfast</a>
             </figcaption>
           </figure>
         </div>
