--- a/sweet.html
+++ b/sweet.html
@@ -83,7 +83,7 @@
                   <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                   <a class="dropdown-item" href="/cookies">Cookies</a>
                   <a class="dropdown-item" href="/entrees">Entrees</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                  <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 </div>
               </li>
               <li class="nav-item">
