--- a/sweet.html
+++ b/sweet.html
@@ -267,6 +267,156 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/baklava" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/puddingchocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/puddingchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/puddingchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/mnmcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/crepes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/palacinke.jpg" class="w-100" alt="Crepes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/crepes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crepes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pancakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fluffy Pancakes</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkinbread.png" class="w-100" alt="Pumpkin Bread">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/creampuffs" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </div>
     </section>
   </div>
